@@ -20,7 +20,12 @@ import mondrian.spi.PropertyFormatter;
 import mondrian.util.*;
 
 import org.apache.commons.collections.map.Flat3Map;
-
+import org.eclipse.daanse.olap.api.Dimension;
+import org.eclipse.daanse.olap.api.Hierarchy;
+import org.eclipse.daanse.olap.api.Level;
+import org.eclipse.daanse.olap.api.Member;
+import org.eclipse.daanse.olap.api.OlapElement;
+import org.eclipse.daanse.olap.api.Schema;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -181,8 +186,8 @@ public class RolapMemberBase
 
     // Regular members do not have annotations. Measures and calculated members
     // do, so they override this method.
-    public Map<String, Annotation> getAnnotationMap() {
-        return Collections.emptyMap();
+    public Map<String, Object> getMetadata() {
+        return Map.of();
     }
 
     public int hashCode() {
@@ -951,7 +956,7 @@ public class RolapMemberBase
         /**
          * Creates a {@link java.util.Map} to be used for storing
          * property string/value pairs for the specified
-         * {@link mondrian.olap.Member}.
+         * {@link org.eclipse.daanse.olap.api.Member}.
          *
          * @param member Member
          * @return the Map instance to store property/value pairs
@@ -978,7 +983,7 @@ public class RolapMemberBase
          *
          * <p>Guessing the number of properties
          * can be tricky since some subclasses of
-         * {@link mondrian.olap.Member}</p> have additional properties
+         * {@link org.eclipse.daanse.olap.api.Member}</p> have additional properties
          * that aren't explicitly declared.  The most common offenders
          * are the (@link mondrian.olap.Measure} implementations, which
          * often have 4 or more undeclared properties, so if the member
